NPAPI Plugin NPP_AsFile not working on Qt Webkit https://bugs.webkit.org/show_bug.cgi?id=29068

Patch by Rohini Ananth <rohini.ananth@nokia.com> on 2009-09-09
Reviewed by Simon Hausmann.

* platform/qt/FileSystemQt.cpp:
(WebCore::openTemporaryFile)
Autoremove property of QTemporaryFile has been set to false. Hence closeFile() just closes and does not delete the file.
This solves the deletion of created temp file in PluginStream::destroyStream() before passing to plugin in NPP_AsFile.

Canonical link: https://commits.webkit.org/39773@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48204 268f45cc-cd09-0410-ab3c-d52691b4dbfc